Fix Spacing in home and Service Pages

--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,7 @@ body{
     background-repeat: no-repeat;
     
     background-position:  right bottom ;
+    margin-bottom: 16px;
 }
 
 .heroText{
@@ -54,12 +55,13 @@ body{
 /* Service Section Design */
 
 .serviceSection{
-    padding:2vh 2vw;
-    margin-top: 0;
+    /* padding:2vh 2vw; */
+    
+    margin: 16px 8px;
     background-color: var(--secondary_color);
     max-width:100vw ;
     display: flex;
-    gap:2vh;
+    gap:8px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -68,6 +70,7 @@ body{
 .serviceSection>h1{
     font-size: 28px;
     color:var(--btn_color);
+    margin:8px 0;
 }
 .serviceContainer{
     max-width: 100vw;
@@ -123,10 +126,10 @@ body{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
+    margin: 32px 8px;
 }
 .section3>h1{
+    margin: 8px 0px;
     text-align: center;
     font-size: 28px;
     color: var(--btn_color);
@@ -134,10 +137,10 @@ body{
 .card_container{
     display: flex;
     justify-content: space-evenly;
-    gap:4vh;
+    gap:32px;
     flex-wrap: wrap;
-    padding : 4vh 4vw;
-
+    /* padding : 4vh 4vw; */
+    margin:8px 0
 }
 .card{
     user-select: none;
@@ -155,7 +158,7 @@ body{
     
 }
 .card:hover{
-    top:-10px;
+    /* top:-10px; */
     transition: all 5ms ease-out;
     
 }
@@ -163,8 +166,9 @@ body{
     width:60%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding:15px;
+    justify-content: space-evenly;
+    gap:8px;
+    padding:16px;
 }
 .desc>.heading{
     font-size: 28px;
@@ -216,22 +220,23 @@ body{
     display: flex ;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 4vh;
+    margin: 32px 0
 
 
 }
 
 .testimonial_section>h1{
+    margin:8px 0;
     font-size: 28px;
     font-weight: 600;
     color:var(--btn_color);
-    max-width: 80vw;
+    max-width: 60vw;
     text-align: center;
     
 }
 .testimonial_container_1{
     /* position: absolute; */
-    margin-top:2vh;
+    /* margin-top:2vh; */
     max-width:100vw;
     box-sizing: border-box;
     overflow: hidden;
@@ -246,7 +251,7 @@ body{
 
 }
 .cardslides{
-    margin:  4vh 0vw;
+     margin:  16px 0;
     width:700px;
     min-height:350px;
     display: flex;
@@ -340,7 +345,7 @@ body{
     gap:10px;
     /* position: absolute; */
     bottom:20px;
-    padding-bottom: 4vh;
+    margin-bottom: 32px;
     align-items: center;
     box-sizing: border-box;
 }
