--- a/css/service.css
+++ b/css/service.css
@@ -84,6 +84,7 @@
     align-items: center;
     box-sizing: border-box;
     gap:10px;
+    margin:16px 0;
 }
 .filter{
    
@@ -155,7 +156,7 @@
     max-width: 100vw;
     margin-top: 40px;
     overflow: hidden;
-    margin-bottom: 40px;
+    margin: 16px 0;
 }
 .psection{
     max-width: 100vw;
@@ -163,9 +164,9 @@
    
     display: flex;
     justify-content: center;
-    gap:40px;
+    gap:16px;
     flex-wrap: wrap;
-    margin-bottom: 40px;
+    margin: 16px 0;
 }
 .inactive{
     display: none;
